// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit tests for the dataset detail page. Should render detail of a dataset. 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="lg:px-8 xl:px-56 flex flex-col"
  >
    <div
      class="px-4 lg:px-6 py-4 bg-dial-violet text-dial-stratos ribbon-detail z-40"
    >
      <div
        class="whitespace-nowrap text-ellipsis overflow-hidden"
      >
        <a
          class="h5"
          href="/"
        >
          Home
        </a>
      </div>
    </div>
    <div
      class="flex flex-col lg:flex-row gap-x-8"
    >
      <div
        class="lg:basis-1/3"
      >
        <div
          class="bg-dial-slate-100 lg:h-full"
        >
          <div
            class="flex flex-col gap-y-3 px-4 lg:px-6 lg:py-3"
          >
            <div
              class="flex flex-col gap-y-4 py-3"
            >
              <div
                class="text-xl text-dial-plum font-semibold"
              >
                AI Agro
              </div>
              <div
                class="flex justify-center items-center py-16 bg-white rounded border"
              >
                <div
                  class="inline"
                >
                  <img
                    alt="Logo of Dataset."
                    class="object-contain w-20 h-20"
                    src="http://localhost:3000//assets/products/ai-agro.png"
                  />
                </div>
              </div>
              <div
                class="flex flex-col gap-y-8 text-sm pt-6 pb-3"
              >
                <div
                  class="flex flex-col gap-y-3"
                >
                  <div
                    class="font-semibold text-dial-plum"
                  >
                    Open Data Website
                  </div>
                  <div
                    class="flex text-dial-stratos"
                  >
                    <a
                      class="flex border-b border-dial-iris-blue "
                      href="//rentadrone.cl/developers/ai-agro"
                      rel="noreferrer"
                      target="_blank"
                    >
                      <div
                        class="line-clamp-1 break-all"
                      >
                        rentadrone.cl/developers/ai-agro
                      </div>
                    </a>
                     ⧉
                  </div>
                </div>
                <div
                  class="flex flex-col gap-y-3"
                >
                  <div
                    class="flex flex-row gap-3"
                  >
                    <div
                      class="font-semibold text-dial-plum"
                    >
                      Sectors
                    </div>
                    <div
                      class="flex gap-3 ml-auto"
                    />
                  </div>
                  <div
                    class="text-sm text-dial-stratos"
                  >
                    N/A
                  </div>
                </div>
              </div>
            </div>
            <hr
              class="border-b border-dial-slate-200"
            />
            <div
              class="flex flex-col gap-y-3 text-sm py-3"
            >
              <div
                class="font-semibold text-dial-plum"
              >
                Jump To
              </div>
              <div
                class=" css-1uaxf62-container"
              >
                <span
                  class="css-1f43avz-a11yText-A11yText"
                  id="react-select-:r0:-live-region"
                />
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  class="css-1f43avz-a11yText-A11yText"
                />
                <div
                  class="react-select__control css-afrqkl-control"
                >
                  <div
                    class="react-select__value-container css-17t7gkf-ValueContainer"
                  >
                    <div
                      class="react-select__placeholder css-5rjclb-placeholder"
                      id="react-select-:r0:-placeholder"
                    >
                      Select...
                    </div>
                    <div
                      class="react-select__input-container css-qbdosj-Input"
                      data-value=""
                    >
                      <input
                        aria-autocomplete="list"
                        aria-describedby="react-select-:r0:-placeholder"
                        aria-expanded="false"
                        aria-haspopup="true"
                        aria-label="Current active navigation"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        class="react-select__input"
                        id="async-select-id-undefined"
                        role="combobox"
                        spellcheck="false"
                        style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      class="react-select__indicator-separator css-nyxz9h-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      class="react-select__indicator react-select__dropdown-indicator css-2hgo35-indicatorContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-tj5bde-Svg"
                        focusable="false"
                        height="20"
                        viewBox="0 0 20 20"
                        width="20"
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <hr
              class="border-b border-dial-slate-200"
            />
            <div
              class="hidden lg:flex flex-col gap-y-3"
            >
              <div
                class="flex flex-col gap-3 py-3"
              >
                <div
                  class="text-dial-sapphire font-semibold"
                >
                  Bookmark
                </div>
                <button
                  class="group flex flex-row gap-x-3"
                  type="button"
                >
                  <img
                    alt="Logo of Bookmark."
                    class="object-contain"
                    height="40"
                    src="/ui/v1/bookmark-icon.svg"
                    width="40"
                  />
                  <div
                    class="my-auto border-b border-transparent group-hover:border-dial-slate-500"
                  >
                    <div
                      class="text-sm text-dial-stratos text-left"
                    >
                      Bookmark this page.
                    </div>
                  </div>
                </button>
                <div
                  class="text-sm text-dial-stratos"
                >
                  Your bookmarks can be found in your Account page.
                </div>
              </div>
              <hr
                class="border-b border-dial-slate-200"
              />
              <div
                class="flex flex-col gap-3 py-3"
              >
                <div
                  class="text-dial-sapphire font-semibold"
                >
                  Share
                </div>
                <div
                  class="flex flex-row gap-3"
                >
                  <button>
                    <img
                      alt="Logo of LinkedIn."
                      class="object-contain"
                      height="40"
                      src="/ui/v1/linkedin-icon.svg"
                      width="40"
                    />
                  </button>
                  <button>
                    <div
                      class="bg-dial-iris-blue rounded-full w-[40px] h-[40px]"
                    >
                      <div
                        class="flex items-center h-full"
                      >
                        <img
                          alt="Logo of WhatsApp."
                          class="my-auto mx-auto"
                          height="20"
                          src="/ui/v1/whatsapp-icon.svg"
                          width="20"
                        />
                      </div>
                    </div>
                  </button>
                  <button>
                    <img
                      alt="Logo of Email."
                      class="object-contain"
                      height="40"
                      src="/ui/v1/email-icon.svg"
                      width="40"
                    />
                  </button>
                  <button>
                    <img
                      alt="Logo of Copy."
                      class="object-contain"
                      height="40"
                      src="/ui/v1/copy-icon.svg"
                      width="40"
                    />
                  </button>
                </div>
              </div>
              <hr
                class="border-b border-dial-slate-200"
              />
              <div
                class="flex flex-col gap-3 py-3"
              >
                <div
                  class="text-dial-sapphire font-semibold"
                >
                  Comment
                </div>
                <div
                  class="text-sm text-dial-stratos"
                >
                  
    Have a question for the community on this Dataset or have some insight you would like to share?
  
                </div>
                <div
                  class="flex text-white"
                >
                  <div
                    class="bg-dial-iris-blue rounded-md text-sm"
                  >
                    <button
                      class="px-5 py-3"
                      type="button"
                    >
                      Post a comment
                    </button>
                  </div>
                </div>
              </div>
              <hr
                class="border-b border-dial-slate-200"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="lg:basis-2/3"
      >
        <div
          class="px-4 lg:px-0 py-4 lg:py-6"
        >
          <div
            class="flex flex-col gap-y-3"
          >
            <div
              class="flex gap-x-3 ml-auto"
            >
              <a
                class="cursor-pointer bg-dial-iris-blue px-2 py-1 rounded text-white"
                href="ai-agro/edit"
              >
                <svg
                  class="inline pb-0.5"
                  fill="none"
                  height="1em"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 20h9"
                  />
                  <path
                    d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"
                  />
                </svg>
                <span
                  class="text-sm px-1"
                >
                  Edit
                </span>
              </a>
              <button
                class="delete-button gap-x-1.5"
                type="button"
              >
                <svg
                  class="text-sm"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 448 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M170.5 51.6L151.5 80h145l-19-28.4c-1.5-2.2-4-3.6-6.7-3.6H177.1c-2.7 0-5.2 1.3-6.7 3.6zm147-26.6L354.2 80H368h48 8c13.3 0 24 10.7 24 24s-10.7 24-24 24h-8V432c0 44.2-35.8 80-80 80H112c-44.2 0-80-35.8-80-80V128H24c-13.3 0-24-10.7-24-24S10.7 80 24 80h8H80 93.8l36.7-55.1C140.9 9.4 158.4 0 177.1 0h93.7c18.7 0 36.2 9.4 46.6 24.9zM80 128V432c0 17.7 14.3 32 32 32H336c17.7 0 32-14.3 32-32V128H80zm80 64V400c0 8.8-7.2 16-16 16s-16-7.2-16-16V192c0-8.8 7.2-16 16-16s16 7.2 16 16zm80 0V400c0 8.8-7.2 16-16 16s-16-7.2-16-16V192c0-8.8 7.2-16 16-16s16 7.2 16 16zm80 0V400c0 8.8-7.2 16-16 16s-16-7.2-16-16V192c0-8.8 7.2-16 16-16s16 7.2 16 16z"
                  />
                </svg>
                <span
                  class="text-sm"
                >
                  Delete
                </span>
              </button>
            </div>
            <div
              class="text-xl font-semibold text-dial-plum py-3"
            >
              Description
            </div>
            <div
              class="block"
            >
              <div
                class="relative"
              >
                <div
                  class="html-react-parser-viewer text-base"
                >
                  Dataset description
                </div>
              </div>
            </div>
            <hr
              class="border-b border-dial-blue-chalk my-3"
            />
            <div
              class="flex flex-col gap-y-3"
            >
              <div
                class="text-xl font-semibold text-dial-plum"
              >
                Source
              </div>
              <div
                class="flex flex-col gap-3 mt-3"
              >
                <div
                  class="flex flex-row gap-3"
                >
                  <div
                    class="block w-12 relative"
                  >
                    <img
                      alt="Logo for: Digital Public Goods Alliance"
                      class="object-contain"
                      src="/images/origins/dpga.png"
                    />
                  </div>
                  <div
                    class="inline my-auto text-sm"
                  >
                    Digital Public Goods Alliance
                  </div>
                </div>
              </div>
            </div>
            <hr
              class="border-b border-dial-blue-chalk my-3"
            />
            <div
              class="flex flex-col gap-y-3"
            >
              <div
                class="flex flex-col gap-y-3"
              >
                <div
                  class="flex flex-row gap-3"
                >
                  <div
                    class="text-xl font-semibold text-dial-plum"
                  >
                    Sustainable Development Goals
                  </div>
                  <div
                    class="flex gap-3 ml-auto"
                  >
                    <button
                      class="cursor-pointer bg-dial-iris-blue px-2 py-1 rounded text-white"
                      type="button"
                    >
                      <svg
                        class="inline pb-0.5"
                        fill="none"
                        height="1em"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M12 20h9"
                        />
                        <path
                          d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"
                        />
                      </svg>
                      <span
                        class="text-sm px-1"
                      >
                        Edit
                      </span>
                    </button>
                  </div>
                </div>
                <div
                  class="text-sm text-dial-stratos"
                >
                  We do not have any SDG information for this Dataset.
                </div>
              </div>
            </div>
            <hr
              class="border-b border-dial-blue-chalk my-3"
            />
            <div
              class="flex flex-col gap-y-3"
            >
              <div
                class="flex flex-col gap-y-3"
              >
                <div
                  class="flex flex-row gap-3"
                >
                  <div
                    class="text-xl font-semibold text-dial-plum"
                  >
                    Organizations
                  </div>
                  <div
                    class="flex gap-3 ml-auto"
                  >
                    <button
                      class="cursor-pointer bg-dial-iris-blue px-2 py-1 rounded text-white"
                      type="button"
                    >
                      <svg
                        class="inline pb-0.5"
                        fill="none"
                        height="1em"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M12 20h9"
                        />
                        <path
                          d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"
                        />
                      </svg>
                      <span
                        class="text-sm px-1"
                      >
                        Edit
                      </span>
                    </button>
                  </div>
                </div>
                <div
                  class="text-sm italic text-dial-stratos"
                >
                  
    The following organizations support the development and / or implementation of this Dataset.
  
                </div>
                <div
                  class="grid grid-cols-1 lg:grid-cols-2 gap-x-8 gap-y-3"
                >
                  <div
                    class="relative"
                  >
                    <a
                      href="/organizations/rentadronecl"
                    >
                      <div
                        class="rounded-lg bg-gradient-to-r from-workflow-bg-light to-workflow-bg h-16"
                      >
                        <div
                          class="flex flex-row gap-x-3 px-6 h-full"
                        >
                          <img
                            alt="Logo of Organizations."
                            class="object-contain w-10 h-10 my-auto min-w-[2.5rem]"
                            src="http://localhost:3000//assets/organizations/rentadronecl.png"
                          />
                          <div
                            class="text-sm font-semibold text-dial-plum my-auto line-clamp-2"
                          >
                            Rentadrone.cl
                          </div>
                        </div>
                      </div>
                    </a>
                  </div>
                </div>
              </div>
            </div>
            <hr
              class="border-b border-dial-blue-chalk my-3"
            />
            <div
              class="flex flex-col gap-y-3"
            >
              <div
                class="flex flex-col gap-y-3"
              >
                <div
                  class="flex flex-row gap-3"
                >
                  <div
                    class="text-xl font-semibold text-dial-plum"
                  >
                    Countries
                  </div>
                  <div
                    class="flex gap-3 ml-auto"
                  >
                    <button
                      class="cursor-pointer bg-dial-iris-blue px-2 py-1 rounded text-white"
                      type="button"
                    >
                      <svg
                        class="inline pb-0.5"
                        fill="none"
                        height="1em"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M12 20h9"
                        />
                        <path
                          d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"
                        />
                      </svg>
                      <span
                        class="text-sm px-1"
                      >
                        Edit
                      </span>
                    </button>
                  </div>
                </div>
                <div
                  class="grid grid-cols-1 lg:grid-cols-2 gap-x-8 gap-y-3"
                >
                  <div>
                    <div
                      class="relative"
                    >
                      <a
                        href="/countries/au"
                      >
                        <div
                          class="rounded-lg bg-gradient-to-r from-workflow-bg-light to-workflow-bg h-16"
                        >
                          <div
                            class="flex flex-row gap-x-3 px-6 h-full"
                          >
                            <img
                              alt="Flag for country: AU."
                              class="object-contain w-10 h-10 my-auto"
                              src="https://flagsapi.com/AU/flat/64.png"
                            />
                            <div
                              class="text-sm font-semibold text-dial-plum my-auto line-clamp-1"
                            >
                              Australia
                            </div>
                          </div>
                        </div>
                      </a>
                    </div>
                  </div>
                  <div>
                    <div
                      class="relative"
                    >
                      <a
                        href="/countries/cl"
                      >
                        <div
                          class="rounded-lg bg-gradient-to-r from-workflow-bg-light to-workflow-bg h-16"
                        >
                          <div
                            class="flex flex-row gap-x-3 px-6 h-full"
                          >
                            <img
                              alt="Flag for country: CL."
                              class="object-contain w-10 h-10 my-auto"
                              src="https://flagsapi.com/CL/flat/64.png"
                            />
                            <div
                              class="text-sm font-semibold text-dial-plum my-auto line-clamp-1"
                            >
                              Chile
                            </div>
                          </div>
                        </div>
                      </a>
                    </div>
                  </div>
                  <div>
                    <div
                      class="relative"
                    >
                      <a
                        href="/countries/mx"
                      >
                        <div
                          class="rounded-lg bg-gradient-to-r from-workflow-bg-light to-workflow-bg h-16"
                        >
                          <div
                            class="flex flex-row gap-x-3 px-6 h-full"
                          >
                            <img
                              alt="Flag for country: MX."
                              class="object-contain w-10 h-10 my-auto"
                              src="https://flagsapi.com/MX/flat/64.png"
                            />
                            <div
                              class="text-sm font-semibold text-dial-plum my-auto line-clamp-1"
                            >
                              Mexico
                            </div>
                          </div>
                        </div>
                      </a>
                    </div>
                  </div>
                  <div>
                    <div
                      class="relative"
                    >
                      <a
                        href="/countries/pe"
                      >
                        <div
                          class="rounded-lg bg-gradient-to-r from-workflow-bg-light to-workflow-bg h-16"
                        >
                          <div
                            class="flex flex-row gap-x-3 px-6 h-full"
                          >
                            <img
                              alt="Flag for country: PE."
                              class="object-contain w-10 h-10 my-auto"
                              src="https://flagsapi.com/PE/flat/64.png"
                            />
                            <div
                              class="text-sm font-semibold text-dial-plum my-auto line-clamp-1"
                            >
                              Peru
                            </div>
                          </div>
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <hr
              class="border-b border-dial-blue-chalk my-3"
            />
            <div
              class="flex flex-col gap-y-3"
            >
              <div
                class="flex flex-col gap-y-3"
              >
                <div
                  class="flex flex-row gap-3"
                >
                  <div
                    class="text-xl font-semibold text-dial-plum"
                  >
                    Tags
                  </div>
                  <div
                    class="flex gap-3 ml-auto"
                  >
                    <button
                      class="cursor-pointer bg-dial-iris-blue px-2 py-1 rounded text-white"
                      type="button"
                    >
                      <svg
                        class="inline pb-0.5"
                        fill="none"
                        height="1em"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M12 20h9"
                        />
                        <path
                          d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"
                        />
                      </svg>
                      <span
                        class="text-sm px-1"
                      >
                        Edit
                      </span>
                    </button>
                  </div>
                </div>
                <div
                  class="text-sm text-dial-stratos"
                >
                  We do not have any Tag information for this Dataset.
                </div>
              </div>
            </div>
            <hr
              class="border-b border-dial-blue-chalk my-3"
            />
            <div
              class="lg:hidden flex flex-col gap-y-3"
            >
              <div
                class="flex flex-col gap-3 py-3"
              >
                <div
                  class="text-dial-sapphire font-semibold"
                >
                  Bookmark
                </div>
                <button
                  class="group flex flex-row gap-x-3"
                  type="button"
                >
                  <img
                    alt="Logo of Bookmark."
                    class="object-contain"
                    height="40"
                    src="/ui/v1/bookmark-icon.svg"
                    width="40"
                  />
                  <div
                    class="my-auto border-b border-transparent group-hover:border-dial-slate-500"
                  >
                    <div
                      class="text-sm text-dial-stratos text-left"
                    >
                      Bookmark this page.
                    </div>
                  </div>
                </button>
                <div
                  class="text-sm text-dial-stratos"
                >
                  Your bookmarks can be found in your Account page.
                </div>
              </div>
              <hr
                class="border-b border-dial-slate-200"
              />
              <div
                class="flex flex-col gap-3 py-3"
              >
                <div
                  class="text-dial-sapphire font-semibold"
                >
                  Share
                </div>
                <div
                  class="flex flex-row gap-3"
                >
                  <button>
                    <img
                      alt="Logo of LinkedIn."
                      class="object-contain"
                      height="40"
                      src="/ui/v1/linkedin-icon.svg"
                      width="40"
                    />
                  </button>
                  <button>
                    <div
                      class="bg-dial-iris-blue rounded-full w-[40px] h-[40px]"
                    >
                      <div
                        class="flex items-center h-full"
                      >
                        <img
                          alt="Logo of WhatsApp."
                          class="my-auto mx-auto"
                          height="20"
                          src="/ui/v1/whatsapp-icon.svg"
                          width="20"
                        />
                      </div>
                    </div>
                  </button>
                  <button>
                    <img
                      alt="Logo of Email."
                      class="object-contain"
                      height="40"
                      src="/ui/v1/email-icon.svg"
                      width="40"
                    />
                  </button>
                  <button>
                    <img
                      alt="Logo of Copy."
                      class="object-contain"
                      height="40"
                      src="/ui/v1/copy-icon.svg"
                      width="40"
                    />
                  </button>
                </div>
              </div>
              <hr
                class="border-b border-dial-slate-200"
              />
            </div>
            <div
              class="text-dial-sapphire"
            >
              <div
                id="comments-section"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit tests for the dataset detail page. Should render edit page for logged in user. 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="lg:px-8 xl:px-56 flex flex-col"
  >
    <div
      class="px-4 lg:px-6 py-4 bg-dial-blue-chalk text-dial-stratos ribbon-detail z-40"
    >
      <div
        class="whitespace-nowrap text-ellipsis overflow-hidden"
      >
        <a
          class="h5"
          href="/"
        >
          Home
        </a>
      </div>
    </div>
    <div
      class="flex flex-col lg:flex-row gap-x-8"
    >
      <div
        class="lg:basis-1/3"
      >
        <div
          class="bg-dial-slate-100 lg:h-full"
        >
          <div
            class="flex flex-col gap-y-3 px-4 lg:px-6 lg:py-3"
          >
            <div
              class="flex flex-col gap-y-4 py-3"
            >
              <div
                class="text-xl text-dial-plum font-semibold"
              >
                AI Agro
              </div>
              <div
                class="flex justify-center items-center py-16 bg-white rounded border"
              >
                <div
                  class="inline"
                >
                  <img
                    alt="Logo of Dataset."
                    class="object-contain w-20 h-20"
                    src="http://localhost:3000//assets/products/ai-agro.png"
                  />
                </div>
              </div>
              <div
                class="flex flex-col gap-y-8 text-sm pt-6 pb-3"
              >
                <div
                  class="flex flex-col gap-y-3"
                >
                  <div
                    class="font-semibold text-dial-plum"
                  >
                    Open Data Website
                  </div>
                  <div
                    class="flex text-dial-stratos"
                  >
                    <a
                      class="flex border-b border-dial-iris-blue "
                      href="//rentadrone.cl/developers/ai-agro"
                      rel="noreferrer"
                      target="_blank"
                    >
                      <div
                        class="line-clamp-1 break-all"
                      >
                        rentadrone.cl/developers/ai-agro
                      </div>
                    </a>
                     ⧉
                  </div>
                </div>
                <div
                  class="flex flex-col gap-y-3"
                >
                  <div
                    class="flex flex-row gap-3"
                  >
                    <div
                      class="font-semibold text-dial-plum"
                    >
                      Sectors
                    </div>
                    <div
                      class="flex gap-3 ml-auto"
                    >
                      <button
                        class="cursor-pointer bg-dial-iris-blue px-2 py-1 rounded text-white"
                        type="button"
                      >
                        <svg
                          class="inline pb-0.5"
                          fill="none"
                          height="1em"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M12 20h9"
                          />
                          <path
                            d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"
                          />
                        </svg>
                        <span
                          class="text-sm px-1"
                        >
                          Edit
                        </span>
                      </button>
                    </div>
                  </div>
                  <div
                    class="text-sm text-dial-stratos"
                  >
                    N/A
                  </div>
                </div>
              </div>
            </div>
            <hr
              class="border-b border-dial-slate-200"
            />
          </div>
        </div>
      </div>
      <div
        class="lg:basis-2/3"
      >
        <form>
          <div
            class="px-4 lg:px-0 py-4 lg:py-6 text-dial-plum"
          >
            <div
              class="flex flex-col gap-y-6 text-sm"
            >
              <div
                class="text-xl font-semibold"
              >
                Edit AI Agro
              </div>
              <div
                class="flex flex-col gap-y-2"
              >
                <label
                  class="text-dial-sapphire required-field"
                  for="name"
                >
                  Open Data Name
                </label>
                <input
                  class="w-full text-sm"
                  id="name"
                  name="name"
                  placeholder="Open Data Name"
                  type="text"
                  value=""
                />
              </div>
              <div
                class="flex flex-col gap-y-2"
              >
                <label
                  class="text-dial-sapphire"
                >
                  Open Data Other Name
                </label>
                <div
                  class="flex gap-x-2"
                >
                  <input
                    class="w-full text-sm"
                    name="aliases.0.value"
                    placeholder="Open Data Other Name"
                    type="text"
                    value=""
                  />
                  <span>
                    <button
                      class="shadow-md px-3 py-2.5 hover:bg-dial-angel"
                      type="button"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 448 512"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z"
                        />
                      </svg>
                    </button>
                  </span>
                </div>
              </div>
              <div
                class="flex flex-col gap-y-2"
              >
                <label
                  class="text-dial-sapphire required-field"
                  for="website"
                >
                  Open Data Website
                </label>
                <div
                  class="border border-transparent url-input bg-white flex items-center"
                >
                  <span
                    class="select-none text-dial-gray"
                  >
                    https://
                  </span>
                  <input
                    class="url w-full text-sm placeholder-dial-gray border-0 py-0 px-0 focus:outline-0"
                    id="website"
                    placeholder="Open Data Website"
                    value="rentadrone.cl/developers/ai-agro"
                  />
                </div>
              </div>
              <div
                class="flex flex-col gap-y-2"
              >
                <label
                  class="text-dial-sapphire"
                  for="visualizationUrl"
                >
                  Open Data Visualization URL
                </label>
                <div
                  class="border border-transparent url-input bg-white flex items-center"
                >
                  <input
                    class="url w-full text-sm placeholder-dial-gray border-0 py-0 px-0 focus:outline-0"
                    id="visualizationUrl"
                    placeholder="Open Data Visualization URL"
                    value=""
                  />
                </div>
              </div>
              <div
                class="flex flex-col gap-y-2"
              >
                <label
                  class="text-dial-sapphire"
                >
                  Open Data Type
                </label>
                <div
                  class=" css-sqp82o-container"
                >
                  <span
                    class="css-1f43avz-a11yText-A11yText"
                    id="react-select-:r1:-live-region"
                  />
                  <span
                    aria-atomic="false"
                    aria-live="polite"
                    aria-relevant="additions text"
                    class="css-1f43avz-a11yText-A11yText"
                  />
                  <div
                    class="react-select__control css-afrqkl-control"
                  >
                    <div
                      class="react-select__value-container react-select__value-container--has-value css-17t7gkf-ValueContainer"
                    >
                      <div
                        class="react-select__single-value css-1dimb5e-singleValue"
                      >
                        AI Model
                      </div>
                      <div
                        class="react-select__input-container css-qbdosj-Input"
                        data-value=""
                      >
                        <input
                          aria-autocomplete="list"
                          aria-expanded="false"
                          aria-haspopup="true"
                          autocapitalize="none"
                          autocomplete="off"
                          autocorrect="off"
                          class="react-select__input"
                          id="react-select-id-datasetType"
                          role="combobox"
                          spellcheck="false"
                          style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                          tabindex="0"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        class="react-select__indicator-separator css-nyxz9h-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class="react-select__indicator react-select__dropdown-indicator css-2hgo35-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-tj5bde-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex flex-col gap-y-2"
              >
                <label
                  class="text-dial-sapphire"
                >
                  Logo
                </label>
                <label
                  class="flex items-center"
                >
                  <input
                    accept=".jpg,.jpeg,.png,.bmp"
                    class="bg-white file:hidden w-full text-sm"
                    name="imageFile"
                    type="file"
                  />
                  <div
                    class="-ml-11 flex p-1"
                  >
                    <span
                      class="h-full pl-1 border-l text-dial-gray-dark border-dial-gray-dark"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        version="1.1"
                        viewBox="0 0 16 16"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M13 14h-10v-2l3-5 4.109 5 2.891-2v4z"
                        />
                        <path
                          d="M13 7.5c0 0.828-0.672 1.5-1.5 1.5s-1.5-0.672-1.5-1.5 0.672-1.5 1.5-1.5c0.828 0 1.5 0.672 1.5 1.5z"
                        />
                        <path
                          d="M14.341 3.579c-0.347-0.473-0.831-1.027-1.362-1.558s-1.085-1.015-1.558-1.362c-0.806-0.591-1.197-0.659-1.421-0.659h-7.75c-0.689 0-1.25 0.561-1.25 1.25v13.5c0 0.689 0.561 1.25 1.25 1.25h11.5c0.689 0 1.25-0.561 1.25-1.25v-9.75c0-0.224-0.068-0.615-0.659-1.421zM12.271 2.729c0.48 0.48 0.856 0.912 1.134 1.271h-2.406v-2.405c0.359 0.278 0.792 0.654 1.271 1.134zM14 14.75c0 0.136-0.114 0.25-0.25 0.25h-11.5c-0.135 0-0.25-0.114-0.25-0.25v-13.5c0-0.135 0.115-0.25 0.25-0.25 0 0 7.749-0 7.75 0v3.5c0 0.276 0.224 0.5 0.5 0.5h3.5v9.75z"
                        />
                      </svg>
                    </span>
                  </div>
                </label>
                <div
                  class="text-xs italic text-dial-stratos"
                >
                  Note: Supported file types are jpg, png, and bmp
                </div>
              </div>
              <div
                class="flex flex-col gap-y-2"
              >
                <label
                  class="text-dial-sapphire"
                  for="geographicCoverage"
                >
                  Geographic Coverage
                </label>
                <input
                  class="w-full text-sm"
                  id="geographicCoverage"
                  name="geographicCoverage"
                  placeholder="Geographic Coverage"
                  type="text"
                  value=""
                />
              </div>
              <div
                class="flex flex-col gap-y-2"
              >
                <label
                  class="text-dial-sapphire"
                  for="timeRange"
                >
                  Time Range
                </label>
                <input
                  class="w-full text-sm"
                  id="timeRange"
                  name="timeRange"
                  placeholder="Time Range"
                  type="text"
                  value=""
                />
              </div>
              <div
                class="flex flex-col gap-y-2"
              >
                <label
                  class="text-dial-sapphire"
                  for="license"
                >
                  License
                </label>
                <input
                  class="w-full text-sm"
                  id="license"
                  name="license"
                  placeholder="License"
                  type="text"
                  value=""
                />
              </div>
              <div
                class="flex flex-col gap-y-2"
              >
                <label
                  class="text-dial-sapphire"
                  for="languages"
                >
                  Languages
                </label>
                <input
                  class="w-full text-sm"
                  id="languages"
                  name="languages"
                  placeholder="Languages"
                  type="text"
                  value=""
                />
              </div>
              <div
                class="flex flex-col gap-y-2"
              >
                <label
                  class="text-dial-sapphire"
                  for="dataFormat"
                >
                  Data Format
                </label>
                <input
                  class="w-full text-sm"
                  id="dataFormat"
                  name="dataFormat"
                  placeholder="Data Format"
                  type="text"
                  value=""
                />
              </div>
              <div
                class="flex flex-col gap-y-2"
              >
                <label
                  class="text-dial-sapphire required-field"
                >
                  Description
                </label>
                <div
                  class="relative"
                >
                  <svg
                    class="absolute text-lg inset-x-1/2 top-10 spinner"
                    fill="currentColor"
                    height="2em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 512 512"
                    width="2em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M304 48a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zm0 416a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zM48 304a48 48 0 1 0 0-96 48 48 0 1 0 0 96zm464-48a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zM142.9 437A48 48 0 1 0 75 369.1 48 48 0 1 0 142.9 437zm0-294.2A48 48 0 1 0 75 75a48 48 0 1 0 67.9 67.9zM369.1 437A48 48 0 1 0 437 369.1 48 48 0 1 0 369.1 437z"
                    />
                  </svg>
                  <div
                    class="html-editor"
                  >
                    <textarea
                      id="description-editor"
                      style="visibility: hidden;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="flex flex-wrap text-base mt-6 gap-3"
              >
                <button
                  class="submit-button"
                  disabled=""
                  type="submit"
                >
                  Submit Dataset
                  <svg
                    class="spinner ml-3"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M304 48a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zm0 416a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zM48 304a48 48 0 1 0 0-96 48 48 0 1 0 0 96zm464-48a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zM142.9 437A48 48 0 1 0 75 369.1 48 48 0 1 0 142.9 437zm0-294.2A48 48 0 1 0 75 75a48 48 0 1 0 67.9 67.9zM369.1 437A48 48 0 1 0 437 369.1 48 48 0 1 0 369.1 437z"
                    />
                  </svg>
                </button>
                <button
                  class="cancel-button"
                  disabled=""
                  type="button"
                >
                  Cancel
                </button>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit tests for the dataset detail page. Should render unauthorized for non logged in user. 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="lg:px-8 xl:px-56 flex flex-col"
  >
    <div
      class="px-4 lg:px-6 py-4 bg-dial-blue-chalk text-dial-stratos ribbon-detail z-40"
    >
      <div
        class="whitespace-nowrap text-ellipsis overflow-hidden"
      >
        <a
          class="h5"
          href="/"
        >
          Home
        </a>
      </div>
    </div>
    <div
      class="flex flex-col lg:flex-row gap-x-8"
    >
      <div
        class="lg:basis-1/3"
      >
        <div
          class="bg-dial-slate-100 lg:h-full"
        >
          <div
            class="flex flex-col gap-y-3 px-4 lg:px-6 lg:py-3"
          >
            <div
              class="flex flex-col gap-y-4 py-3"
            >
              <div
                class="text-xl text-dial-plum font-semibold"
              >
                AI Agro
              </div>
              <div
                class="flex justify-center items-center py-16 bg-white rounded border"
              >
                <div
                  class="inline"
                >
                  <img
                    alt="Logo of Dataset."
                    class="object-contain w-20 h-20"
                    src="http://localhost:3000//assets/products/ai-agro.png"
                  />
                </div>
              </div>
              <div
                class="flex flex-col gap-y-8 text-sm pt-6 pb-3"
              >
                <div
                  class="flex flex-col gap-y-3"
                >
                  <div
                    class="font-semibold text-dial-plum"
                  >
                    Open Data Website
                  </div>
                  <div
                    class="flex text-dial-stratos"
                  >
                    <a
                      class="flex border-b border-dial-iris-blue "
                      href="//rentadrone.cl/developers/ai-agro"
                      rel="noreferrer"
                      target="_blank"
                    >
                      <div
                        class="line-clamp-1 break-all"
                      >
                        rentadrone.cl/developers/ai-agro
                      </div>
                    </a>
                     ⧉
                  </div>
                </div>
                <div
                  class="flex flex-col gap-y-3"
                >
                  <div
                    class="flex flex-row gap-3"
                  >
                    <div
                      class="font-semibold text-dial-plum"
                    >
                      Sectors
                    </div>
                    <div
                      class="flex gap-3 ml-auto"
                    />
                  </div>
                  <div
                    class="text-sm text-dial-stratos"
                  >
                    N/A
                  </div>
                </div>
              </div>
            </div>
            <hr
              class="border-b border-dial-slate-200"
            />
          </div>
        </div>
      </div>
      <div
        class="lg:basis-2/3"
      >
        <div
          class="h-[60vh]"
        >
          <div
            class="flex bg-dial-alice-blue h-full"
          >
            <div
              class="text-dial-stratos text-lg w-full my-auto flex flex-col gap-4"
            >
              <svg
                class="mx-auto"
                fill="currentColor"
                height="3em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="3em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zm0-384c13.3 0 24 10.7 24 24V264c0 13.3-10.7 24-24 24s-24-10.7-24-24V152c0-13.3 10.7-24 24-24zM224 352a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"
                />
              </svg>
              <div
                class="text-center mt-5"
              >
                You are not authorized to view this page
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
